# kernel

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  linker.ld
.github/workflows/: build.yml  cmake.yml  doxygen.yml
headers/: kernel.hpp  vga.h
sources/: kernel.cpp  main.c  main.cpp  vga.c
